@@ -22,6 +22,7 @@
   - and disable calling step when logged via DSL
 - Log unresolved field value if interpolation fails during result file logging
 - Support relative file locations in `@Import` and `@Examples` annotations
+- Load all associative meta if features are specified with `--repl` option
 - Update dependencies
   - Update scala from v3.5.0 to v3.5.2
   - Update gherkin from v29.0.0 to v30.0.0
